<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>dk.ku.di.dms.vms</groupId>
    <artifactId>vms-runtime-java</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <artifactId>sdk-core</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>sdk-core</name>
  <url>https://rnlaigner.github.io</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>18</maven.compiler.source>
    <maven.compiler.target>18</maven.compiler.target>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.reflections</groupId>
      <artifactId>reflections</artifactId>
      <version>0.10.2</version>
<!--      <scope>runtime</scope>-->
    </dependency>

    <dependency>
        <groupId>dk.ku.di.dms.vms.modb</groupId>
        <artifactId>modb-common</artifactId>
        <version>1.0-SNAPSHOT</version>
        <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>dk.ku.di.dms.vms.modb</groupId>
      <artifactId>modb-api</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>dk.ku.di.dms.vms</groupId>
      <artifactId>web_common</artifactId>
      <version>1.0-SNAPSHOT</version>
      <scope>compile</scope>
    </dependency>

  </dependencies>

</project>
